# clip2file

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/clip2file/: __init__.py  clip2file.py
